--- a/main.tex
+++ b/main.tex
@@ -165,7 +165,8 @@
         \vspace{5 pt}
 
         \normalsize
-        \mbox{Sheffield, UK}%
+        \kern 5.0 pt%
+        \mbox{United Kingdom}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
@@ -173,11 +174,7 @@
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{tel:+448742104354}{07842104354}}%
-        \kern 5.0 pt%
-        \AND%
-        \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{https://everbit.dev/}{everbit.dev}}%
+        \mbox{\hrefWithoutArrow{tel:+448742104354}{+447842104354}}%
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
@@ -185,38 +182,36 @@
         \kern 5.0 pt%
         \AND%
         \kern 5.0 pt%
-        \mbox{\hrefWithoutArrow{https://github.com/yourusername}{github.com/soup666}}%
+        \mbox{\hrefWithoutArrow{https://everbit.dev/}{everbit.dev}}%
+        \kern 5.0 pt%
+        \AND%
+        \kern 5.0 pt%
+        \mbox{\hrefWithoutArrow{https://github.com/yourusername}{github.com/sam-laister}}%
     \end{header}
 
     \vspace{5 pt - 0.3 cm}
-
-
-    \section{Everbit Software}
-        
-        \begin{onecolentry}
-            Co-founded in June 2023, I managed an app development team for my company Everbit Software, comprised of dedicated development team. We successfully launched multiple Flutter and React Native projects with clients during this time. As a company, we also collaborated on a national Internet of Things Wirepas lighting system and multiple web applications for independent businesses using SvelteKit and PHP.
-        \end{onecolentry}
 
     \section{Education}
 
         \begin{twocolentry}{
             Sept 2022 – May 2025
         }
-            \textbf{Sheffield University}, BSc in Computer Science\end{twocolentry}
+            \textbf{BSc Computer Science}, Sheffield University\end{twocolentry}
 
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item \textbf{Expected Grade:} 2:1.
-                \item \textbf{Studied Tech:} Typescript, Python, C++, Go, Rust, Ruby on Rails, Software Architecture, Systems Design.
-                \item \textbf{Dissertation Project:} Utilizing AI with Photogrammetry into a fullstack mobile application.
+                \item \textbf{Expected:} 2:1.
+                \item \textbf{Relevant coursework:} Typescript, Python, C++, Go, Rust, Ruby on Rails, Software Architecture, Systems Design.
+                \item \textbf{Final year project:} Integrating AI and Photogrammetry in a Fullstack Mobile Application (Flutter + Go).
             \end{highlights}
         \end{onecolentry}
+
     
     \section{Experience}
 
         \begin{twocolentry}{
-            Jan 2024 - Present
+            Jan 2024 - June 2025
         }
             \textbf{Chief Technical Advisor}, Wellmatch Ltd -- London, UK\end{twocolentry}
 
@@ -238,7 +233,7 @@
         \begin{onecolentry}
             \begin{highlights}
                 \item Developed Bespoke Solutions with Clients.
-                \item Launched multiple App's, Including \href{https://www.linkedin.com/company/mealsapp/}{Meal's Recipe Planner} on the app store as well as a national Wirepas Lighting System to connect Emergency Lights with BLE Lighting. Used in Ikea nationally.
+                \item Launched multiple apps, Including \href{https://www.linkedin.com/company/mealsapp/}{Meals: Recipe Planner} on the app store as well as a national Wirepas Lighting System to connect Emergency Lights with BLE Lighting. Used in Ikea nationally.
                 \item In depth knowledge of XCode and Apple's Provisioning Profile system. Experience with Apple Connect and Fastlane.
                 \item Experience managing a company and a small development team.
                 \item Server hosting for multiple clients.
@@ -257,6 +252,11 @@
             \end{highlights}
         \end{onecolentry}
 
+    \section{Everbit Software}
+        
+        \begin{onecolentry}
+            Co-founded in June 2023, I managed an app development team for my company Everbit Software, comprised of dedicated development team. We successfully launched multiple Flutter and React Native projects with clients during this time. As a company, we also collaborated on a national Internet of Things Wirepas lighting system and multiple web applications for independent businesses using SvelteKit and PHP.
+        \end{onecolentry}
     
     \section{Projects}
 
@@ -266,9 +266,8 @@
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item The interface consisted of a dynamic Admin Portal interface to register BLE light's to and control remotely using schedules and reporting features.
+                \item Built an admin dashboard for a BLE-based lighting system using SvelteKit and Python. Deployed in multiple UK IKEA locations.
                 \item Stack: Python, PHP, SvelteKit, Wirepas
-                \item Installed in multiple Ikea's across the UK. 
             \end{highlights}
         \end{onecolentry}
 
@@ -280,25 +279,28 @@
         \vspace{0.10 cm}
         \begin{onecolentry}
             \begin{highlights}
-                \item Utlizies Gemini's AI Api to feature detect physical scans of objects and uses OpenMVG + OpenMVS to create digital fully textures models with names and descriptions. 
+                \item Developed a pipeline to convert mobile photogrammetry scans into 3D models using AI-assisted feature detection (Gemini API), OpenMVG, and OpenMVS.
                 \item Stack: Go, Flutter, PostgreSQL
                 \item Tools Used: Goose Database Migration Manager, GORM for Go an ORM library in Go.
             \end{highlights}
         \end{onecolentry}
 
-        \vspace{0.2 cm}
 
     
     \section{Technologies}
         
         \begin{onecolentry}
-            \textbf{Languages:} Go, PostgreSQL, React Native, Flutter, Svelte, PHP (Symfony), Java, Python, Kotlin, Ruby.
+            \textbf{Languages:} Go, Python, TypeScript, PHP, Kotlin, Java, C++, Rust, Ruby.
         \end{onecolentry}
 
-        \vspace{0.2 cm}
 
         \begin{onecolentry}
-            \textbf{Technologies:} XCode, Gradle, Expo (React Native), Api Platform (PHP), Fastlane.
+            \textbf{Frameworks:} React Native, Flutter, SvelteKit, Symfony, Ruby on Rails.
+        \end{onecolentry}
+
+
+        \begin{onecolentry}
+            \textbf{Tools:} Xcode, Fastlane, Expo, Gradle, GORM, Goose, Wirepas, API Platform.
         \end{onecolentry}
 
 \end{document}
